--- a/video/player/hlsStream.html
+++ b/video/player/hlsStream.html
@@ -9,7 +9,7 @@
 
     <script>
         var video = document.getElementById('video');
-        var videoSrc = '../segments/master.m3u8';
+        var videoSrc = '../segments/bigChungus/master.m3u8';
         if(Hls.isSupported()) {
             var hls = new Hls();
             hls.loadSource(videoSrc);
